--- a/diploma/project/templates/inc/header/_nav_profile.html
+++ b/diploma/project/templates/inc/header/_nav_profile.html
@@ -2,7 +2,7 @@
 <nav class="row-block">
 	<div class="row ControlPanel-rowSplit">
 		<div class="row-block">
-			<a class="ControlPanel-title" href="{% url 'profile' %}">Login / Register</a>
+			<a class="ControlPanel-title" href="{% url 'account' %}">Login / Register</a>
 		</div>
 	</div>
 </nav>
