--- a/diploma/project/app_profile/templates/app_profile/profile.html
+++ b/diploma/project/app_profile/templates/app_profile/profile.html
@@ -2,65 +2,30 @@
 
 {% load static %}
 
-{% block 'main' %}
-
+{% block main %}
 <div class="Middle Middle_top">
-		
-	<div class="Middle-top">
 
-		<div class="wrap">
-				
-			<div class="Middle-header">
-
-				<h1 class="Middle-title">Личный кабинет</h1>
-
-				<ul class="breadcrumbs Middle-breadcrumbs">
-					<li class="breadcrumbs-item">
-						<a href="index.html">home</a>
-					</li>
-					<li class="breadcrumbs-item breadcrumbs-item_current">
-						<span>Личный кабинет</span>
-					</li>
-				</ul>
-
-			</div>
-
-		</div>
-
-	</div>
+	{% with title='Профиль' span='Профиль' %}
+		{% include 'inc/header/_middle.html' %}
+	{% endwith %}
 
 	<div class="Section Section_column Section_columnLeft">
-
+	
 		<div class="wrap">
-
+	
 			<div class="Section-column">
-					
+	
 				<div class="Section-columnSection">
-
+					
 					<header class="Section-header">
 						<strong class="Section-title">Навигация</strong>
 					</header>
 					
 					<div class="Section-columnContent">
 
-						<div class="NavigateProfile">
-						
-							<ul class="menu menu_vt">
-								<li class="menu-item_ACTIVE menu-item">
-									<a class="menu-link" href="account.html">Личный кабинет</a>
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="profile.html">Профиль</a>
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="historyorder.html">История заказов</a>
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="historyview.html">История просмотра</a>
-								</li>
-							</ul>
-
-						</div>
+						{% block navigate_profile %}
+							{% include 'app_profile/inc/_navigate_profile.html' %}
+						{% endblock %}
 
 					</div>
 
@@ -69,100 +34,69 @@
 			</div>
 
 			<div class="Section-content">
-
-				<div class="Account">
-
-					<div class="Account-group">
-
-						<div class="Account-column">
-
-							<div class="Account-avatar">
-								<img src="{% static 'assets/img/content/home/card.jpg' %}" alt="card.jpg">
-							</div>
-
-						</div>
-
-						<div class="Account-column">
-							<div class="Account-name">
-								Иванов Иван Иванович
-							</div>
-							<a class="Account-editLink" href="profile.html">Редактировать профиль</a>
-						</div>
-
-					</div>
-
-					<div class="Account-group">
-						
-						<div class="Account-column Account-column_full">
-						
-							<div class="Order Order_anons">
-						
-								<div class="Order-personal">
-						
-									<div class="row">
-						
-										<div class="row-block">
-											<a class="Order-title" href="oneorder.html">
-												Заказ&#32;
-												<span class="Order-numberOrder">№200</span>&#32;от&#32;
-												<span class="Order-dateOrder">21.07.2020</span>
-											</a>
-
-											<div class="Account-editLink">
-												<a href="historyorder.html">История заказов</a>
-											</div>
+				
+				<div class="Profile">
+				
+					<form class="form Profile-form" action="#" method="post">
+				
+						<div class="row">
+				
+							<div class="row-block">
+				
+								<div class="form-group">
+									<label class="form-label" for="avatar">Аватар</label>
+									<div class="Profile-avatar Profile-avatar_noimg">
+										<div class="Profile-img">
+											<img src="{% static 'assets/img/#.png' %}" alt="#.png"/>
 										</div>
-
-										<div class="row-block">
-										
-											<div class="Order-info Order-info_delivery">
-												<div class="Order-infoType">
-													Тип доставки:
-												</div>
-												<div class="Order-infoContent">
-													Обычная доставка
-												</div>
-											</div>
-
-											<div class="Order-info Order-info_pay">
-												<div class="Order-infoType">
-													Оплата:
-												</div>
-												<div class="Order-infoContent">
-													Онлайн картой
-												</div>
-											</div>
-
-											<div class="Order-info">
-												<div class="Order-infoType">
-													Общая стоимость:
-												</div>
-												<div class="Order-infoContent">
-													200.99$
-												</div>
-											</div>
-
-											<div class="Order-info Order-info_status">
-												<div class="Order-infoType">
-													Статус:
-												</div>
-												
-												<div class="Order-infoContent">
-													Не оплачен
-												</div>
-											</div>
-
-										</div>
-
+										<label class="Profile-fileLabel" for="avatar">Выберите аватар</label>
+										<input class="Profile-file form-input" id="avatar" name="avatar" type="file" data-validate="onlyImgAvatar"/>
 									</div>
+								</div>
 
+								<div class="form-group">
+									<label class="form-label" for="name">ФИО</label>
+									<input class="form-input" id="name" name="name" type="text" value="" data-validate="require"/>
+								</div>
+
+							</div>
+
+							<div class="row-block">
+							
+								<div class="form-group">
+									<label class="form-label" for="phone">Телефон</label>
+									<input class="form-input" id="phone" name="phone" type="text" value="+70000000000"/>
+								</div>
+
+								<div class="form-group">
+									<label class="form-label" for="mail">E-mail</label>
+									<input class="form-input" id="mail" name="mail" type="text" value="send@test.test" data-validate="require"/>
+								</div>
+
+								<div class="form-group">
+									<label class="form-label" for="password">Пароль</label>
+									<input class="form-input" id="password" name="password" type="password" placeholder="Тут можно изменить пароль"/>
+								</div>
+
+								<div class="form-group">
+									<label class="form-label" for="passwordReply">Подтверждение пароля</label>
+									<input class="form-input" id="passwordReply" name="passwordReply" type="password" placeholder="Введите пароль повторно"/>
+								</div>
+
+								<div class="form-group">
+									<div class="Profile-btn">
+										<button class="btn btn_success" type="submit">Сохранить</button>
+									</div>
+									<div class="Profile-success">
+										Профиль успешно сохранен
+									</div>
 								</div>
 
 							</div>
 
 						</div>
 
-					</div>
+					</form>
 
 				</div>
 
@@ -173,5 +107,4 @@
 	</div>
 
 </div>
-      
 {% endblock %}
