--- a/diploma/project/templates/base.html
+++ b/diploma/project/templates/base.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/basic.css'%}">
     <link rel="stylesheet" href="{% static 'assets/css/extra.css'%}">
     <script src="{% static 'assets/plg/CountDown/countdown.js'%}"></script><!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body class="Site">
@@ -52,7 +53,7 @@
     
       {% endblock  %}
 
-    {% block 'main' %}
+    {% block main %}
       MAIN
     {% endblock  %}
 
