--- a/diploma/project/templates/inc/header/_search.html
+++ b/diploma/project/templates/inc/header/_search.html
@@ -2,9 +2,9 @@
 
 <div class="Header-search">
 	<div class="search">
-		<form class="form form_search" action="#" method="post">
+		<form class="form form_search" method="get">
 			<input class="search-input" id="query" name="query" type="text" placeholder="What are you looking for ..."/>
-			<button class="search-button" type="submit" name="search" id="search">
+			<button class="search-button" type="submit" id="search">
 				<img src="{% static 'assets/img/icons/search.svg' %}" alt="search.svg"/>
 				Search
 			</button>
