--- a/diploma/project/app_shop/templates/app_shop/product_detail.html
+++ b/diploma/project/app_shop/templates/app_shop/product_detail.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load content_image %}
+
 {% block main %}
 <div class="Middle Middle_top">
 
@@ -16,19 +18,16 @@
 
           <div class="ProductCard-look">
             <div class="ProductCard-photo">
-              <img src="{% static 'assets/img/content/home/bigGoods.png' %}" alt="bigGoods.png">
+              <img src="{{product|content_image}}" alt="bigGoods.png">
             </div>
             <div class="ProductCard-picts">
-              <a class="ProductCard-pict ProductCard-pict_ACTIVE" href="{% static 'assets/img/content/home/bigGoods.png' %}">
-                <img src="{% static 'assets/img/content/home/bigGoods.png' %}" alt="bigGoods.png">
+              {% for image in product.images.all %}              
+              <a class="ProductCard-pict ProductCard-pict_ACTIVE" href="{{image.image.url}}">
+                <img src="{{image.image.url}}" alt="bigGoods.png">
               </a>
-              <a class="ProductCard-pict" href="{% static 'assets/img/content/home/slider.png' %}">
-                <img src="{% static 'assets/img/content/home/slider.png' %}" alt="slider.png">
-              </a>
-              <a class="ProductCard-pict" href="{% static 'assets/img/content/home/videoca.png' %}">
-                <img src="{% static 'assets/img/content/home/videoca.png' %}" alt="videoca.png">
-              </a>
+              {% endfor %}
             </div>
+
           </div>
 
           <div class="ProductCard-desc">
@@ -57,7 +56,7 @@
                 </div>
               </div>
               <div class="ProductCard-cartElement">
-                <a class="btn btn_primary" href="#">
+                <a class="btn btn_primary" href="{% url 'add_product_in_basket' slug=product.slug %}">
                   <img class="btn-icon" src="{% static 'assets/img/icons/card/cart_white.svg' %}" alt="cart_white.svg">
                   <span class="btn-content">Add To Cart</span>
                 </a>
@@ -80,7 +79,7 @@
               <span>AdditionaL Info</span>
             </a>
             <a class="Tabs-link" href="#reviews">
-                <span>Reviews (3)</span>
+                <span>Reviews ({{comments|length}})</span>
             </a>
           </div>
           
@@ -94,52 +93,14 @@
               {% include 'app_shop/inc/_additional_info.html' %}
             {% endblock %}
 
-            <div class="Tabs-block" id="reviews">
-              <header class="Section-header">
-                <h3 class="Section-title">2 Reviews</h3>
-              </header>
-              <div class="Comments">
-                <div class="Comment">
-                  <div class="Comment-column Comment-column_pict">
-                    <div class="Comment-avatar"></div>
-                  </div>
-                  <div class="Comment-column">
-                    <header class="Comment-header">
-                      <div>
-                        <strong class="Comment-title">Alexandra Brownie</strong><span class="Comment-date">December 25&#32;&#32;/&#32;&#32;2017&#32;&#32;/&#32;&#32;22:50</span>
-                      </div>
-                    </header>
-                    <div class="Comment-content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis dis parturient montesti, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eutu, pretiumem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justotuio, rhoncus ut loret, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus element semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae.
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <header class="Section-header Section-header_product">
-                <h3 class="Section-title">Add Review</h3>
-              </header>
-              <div class="Tabs-addComment">
-                <form class="form" action="#" method="post">
-                  <div class="form-group">
-                    <textarea class="form-textarea" id="review" name="review" placeholder="Review"></textarea>
-                  </div>
-                  <div class="form-group">
-                    <div class="row">
-                      <div class="row-block">
-                        <input class="form-input" id="name" name="name" type="text" placeholder="Name">
-                      </div>
-                      <div class="row-block">
-                        <input class="form-input" id="email" name="email" type="text" placeholder="Email">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <button class="btn btn_muted" type="submit">Submit Review</button>
-                  </div>
-                </form>
-              </div>
-            </div>
+            {% if request.user.is_authenticated %}
             
+            {% block comment %}
+              {% include 'app_shop/inc/_comment.html' %}
+            {% endblock  %}
+            
+            {% endif %}
+
           </div>
         </div>
       </div>
