--- a/diploma/project/app_profile/templates/app_profile/profile.html
+++ b/diploma/project/app_profile/templates/app_profile/profile.html
@@ -37,59 +37,60 @@
 				
 				<div class="Profile">
 				
-					<form class="form Profile-form" action="#" method="post">
-				
+					<form class="form Profile-form" method="post" enctype="multipart/form-data">
+						{% csrf_token %}
 						<div class="row">
 				
 							<div class="row-block">
-				
 								<div class="form-group">
 									<label class="form-label" for="avatar">Аватар</label>
 									<div class="Profile-avatar Profile-avatar_noimg">
 										<div class="Profile-img">
-											<img src="{% static 'assets/img/#.png' %}" alt="#.png"/>
+											<img src="{{form.avatar.instance.url}}" alt="#.png">
 										</div>
-										<label class="Profile-fileLabel" for="avatar">Выберите аватар</label>
-										<input class="Profile-file form-input" id="avatar" name="avatar" type="file" data-validate="onlyImgAvatar"/>
+										<label class="Profile-fileLabel" for="avatar">{{form.avatar.label}}</label>
+										{{form.avatar}}
 									</div>
 								</div>
 
 								<div class="form-group">
-									<label class="form-label" for="name">ФИО</label>
-									<input class="form-input" id="name" name="name" type="text" value="" data-validate="require"/>
+									<label class="form-label" for="name">{{form.telephon_number.label}}</label>
+									{{form.telephon_number}}
 								</div>
 
 							</div>
 
 							<div class="row-block">
-							
-								<div class="form-group">
-									<label class="form-label" for="phone">Телефон</label>
-									<input class="form-input" id="phone" name="phone" type="text" value="+70000000000"/>
-								</div>
-
-								<div class="form-group">
-									<label class="form-label" for="mail">E-mail</label>
-									<input class="form-input" id="mail" name="mail" type="text" value="send@test.test" data-validate="require"/>
-								</div>
-
-								<div class="form-group">
-									<label class="form-label" for="password">Пароль</label>
-									<input class="form-input" id="password" name="password" type="password" placeholder="Тут можно изменить пароль"/>
-								</div>
-
-								<div class="form-group">
-									<label class="form-label" for="passwordReply">Подтверждение пароля</label>
-									<input class="form-input" id="passwordReply" name="passwordReply" type="password" placeholder="Введите пароль повторно"/>
-								</div>
-
+								{% for field in form_user %}
+									<div class="form-group">
+										<label class="form-label">{{field.label}}</label>
+										{{field}}
+									</div>
+								{% endfor %}
+								
 								<div class="form-group">
 									<div class="Profile-btn">
 										<button class="btn btn_success" type="submit">Сохранить</button>
 									</div>
-									<div class="Profile-success">
-										Профиль успешно сохранен
-									</div>
+
+									{% if form.errors %}
+										<div class="Profile-danger">
+											{% for error in form.errors.values %}
+												{{error}}
+											{% endfor %}
+										</div>
+									{% elif form_user.errors %}
+										<div class="Profile-danger">
+											{% for error in form_user.errors.values %}
+												{{error}}
+											{% endfor %}
+										</div>
+									{% else %}
+										<div class="Profile-success">
+											Профиль успешно сохранен
+										</div>
+									{% endif %}
+
 								</div>
 
 							</div>
