--- a/diploma/project/app_shop/templates/app_shop/inc/_cards.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_cards.html
@@ -1,15 +1,17 @@
 {% load static %}
 
+{% load content_image %}
+
   <div class="Cards">
 
     {% for product in products %}
 
     <div class="Card">
-
-      <a class="Card-picture" href="#">
-        <img src="{% static 'assets/img/content/home/card.jpg' %}" alt="card.jpg"/>
-      </a>
       
+      <a class="Card-picture" href="{{product.get_absolute_url}}">
+        <img src="{{product|content_image}}" alt="card.jpg"/>
+      </a>
+
       <div class="Card-content">
 
         <strong class="Card-title">
