--- a/diploma/project/app_shop/templates/app_shop/inc/_favorites.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_favorites.html
@@ -1,10 +1,12 @@
 {% load static %}
 
+{% load favorite_category %}
+
   <div class="Section">
     <div class="wrap">
       <div class="BannersHome">
 
-        {% for category in categories %}
+        {% for category in categories|favorite_categories %}
         <a class="BannersHomeBlock" href="#">  
           <div class="BannersHomeBlock-row"> 
             <div class="BannersHomeBlock-block">
