--- a/diploma/project/app_shop/templates/app_shop/inc/_limited_edition.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_limited_edition.html
@@ -1,5 +1,8 @@
 {% load static %}
 
+{% load content_image %}
+{% load limited_products %}
+
   <div class="Section-content">
     <div class="Slider Slider_carousel">
 
@@ -13,12 +16,12 @@
 
       <div class="Slider-box Cards">
 
-        {% for product in products %}
+        {% for product in products|limited_products %}
         <div class="Slider-item">
           <div class="Slider-content">
             <div class="Card">
               <a class="Card-picture" href="#">
-                <img src="{% static 'assets/img/content/home/card.jpg' %}" alt="card.jpg"/>
+                <img src="{{product|content_image}}" alt="card.jpg"/>
               </a>
               <div class="Card-content">
                 <strong class="Card-title"><a href="#">{{product.title}}</a></strong>
