--- a/diploma/project/app_shop/templates/app_shop/inc/_popular_products.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_popular_products.html
@@ -1,5 +1,8 @@
 {% load static %}
 
+{% load content_image %}
+{% load top_products %}
+
   <div class="Section Section_column Section_columnDesktop"  >
     <div class="wrap">
 
@@ -10,10 +13,10 @@
         </header>
         <div class="Cards">
 
-          {% for product in products %}
+          {% for product in products|top_products %}
           <div class="Card">
             <a class="Card-picture" href="{{product.get_absolute_url}}">
-              <img src="{% static 'assets/img/content/home/card.jpg' %}" alt="card.jpg"/>
+              <img src="{{product|content_image}}" alt="card.jpg"/>
             </a>
             <div class="Card-content">
               <strong class="Card-title"><a href="#">{{product.title}}</a></strong>
