--- a/diploma/project/templates/inc/header/_categories.html
+++ b/diploma/project/templates/inc/header/_categories.html
@@ -1,183 +1,46 @@
 {% load static %}
 
+{% load mptt_tags %}
+
 <div class="Header-categories">
+	
 		
 	<div class="CategoriesButton">
 
 		<div class="CategoriesButton-title">
 
 			<div class="CategoriesButton-icon">
-				<img src="{% static 'assets/img/icons/allDep.svg' %}" alt="allDep.svg"/>
+				<img src="{% static 'assets/img/icons/allDep.svg' %}" alt="allDep.svg">
 			</div>
 			<span class="CategoriesButton-text">All Departments</span>
 			<div class="CategoriesButton-arrow"></div>
+			
 
 		</div>
 
 		<div class="CategoriesButton-content">
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/1.svg' %}" alt="1.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Accessories</span>
-				</a>
-			</div>
+
+			{% recursetree categories %}
 
 			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/2.svg' %}" alt="2.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Bags</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/3.svg' %}" alt="3.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Cameras</span>
-				</a>
-				<a class="CategoriesButton-arrow" href="#"></a>
 				
-				<div class="CategoriesButton-submenu">
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/1.svg' %}" alt="1.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Accessories</span>
-					</a>
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/2.svg' %}" alt="2.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Bags</span>
-					</a>
-				</div>
-
-			</div>
-
-			<div class="CategoriesButton-link">
 				<a href="#">
 					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/4.svg' %}" alt="4.svg"/>
+						<img src="{% static 'assets/img/icons/departments/10.svg' %}" alt="10.svg">
 					</div>
-					<span class="CategoriesButton-text">Clothings</span>
+					<span class="CategoriesButton-text">{{ node.title }}</span>
 				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/5.svg' %}" alt="5.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Electronics</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/6.svg' %}" alt="6.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Fashion</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/7.svg' %}" alt="7.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Furniture</span>
-				</a>
-				<a class="CategoriesButton-arrow" href="#"></a>
-
-				<div class="CategoriesButton-submenu">
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/1.svg' %}" alt="1.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Accessories</span>
-					</a>
-					
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/2.svg' %}" alt="2.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Bags</span>
-					</a>
-				</div>
-
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/8.svg' %}" alt="8.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Lightings</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/9.svg' %}" alt="9.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Mobiles</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/10.svg' %}" alt="10.svg"/>
-					</div>
-					<span class="CategoriesButton-text">Trends</span>
-				</a>
-			</div>
-
-			<div class="CategoriesButton-link">
-
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/11.svg' %}" alt="11.svg"/>
-					</div>
-					<span class="CategoriesButton-text">More</span>
-				</a>
-				<a class="CategoriesButton-arrow" href="#"></a>
 				
-				<div class="CategoriesButton-submenu">
-					
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/1.svg' %}" alt="1.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Accessories</span>
-					</a>
-					
-					<a class="CategoriesButton-link" href="#">
-						<div class="CategoriesButton-icon">
-							<img src="{% static 'assets/img/icons/departments/2.svg' %}" alt="2.svg"/>
-						</div>
-						<span class="CategoriesButton-text">Bags</span>
-					</a>
-
-				</div>
-
-			</div>
-
-			<div class="CategoriesButton-link">
-				<a href="#">
-					<div class="CategoriesButton-icon">
-						<img src="{% static 'assets/img/icons/departments/12.svg' %}" alt="12.svg"/>
+				{% if not node.is_leaf_node %}
+					<a class="CategoriesButton-arrow" href="#"></a>
+					<div class="CategoriesButton-submenu">
+						{{children}}
 					</div>
-					<span class="CategoriesButton-text">Lightings</span>
-				</a>
+					{% endif %}
+
 			</div>
+			
+			{% endrecursetree %}
 
 		</div>
 
