--- a/diploma/project/app_shop/templates/app_shop/inc/_paginator.html
+++ b/diploma/project/app_shop/templates/app_shop/inc/_paginator.html
@@ -2,6 +2,7 @@
 
   <div class="Pagination">
     <div class="Pagination-ins">
+      {{page_obj.count}}
 
       {% if page_obj.has_previous %}
       
