--- a/diploma/project/templates/inc/header/_categories.html
+++ b/diploma/project/templates/inc/header/_categories.html
@@ -24,7 +24,7 @@
 
 			<div class="CategoriesButton-link">
 				
-				<a href="#">
+				<a href="{% url 'category' slug=node.slug %}">
 					<div class="CategoriesButton-icon">
 						<img src="{% static 'assets/img/icons/departments/10.svg' %}" alt="10.svg">
 					</div>
